--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.18">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -54,7 +54,7 @@
         app:layout_constraintVertical_bias="0.456">
 
         <TextView
-            android:id="@+id/cls"
+            android:id="@+id/textview2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -83,7 +83,7 @@
         app:layout_constraintVertical_bias="0.762">
 
         <TextView
-            android:id="@+id/age"
+            android:id="@+id/textview3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -115,11 +115,19 @@
         app:layout_constraintVertical_bias="0.923" />
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="248dp"
         android:layout_height="67dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.616"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/textView"
@@ -127,7 +135,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="signup form"
-            android:textSize="25sp"/>
+            android:textSize="25sp" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
